umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@ions_cr+3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: ions
atom_typing:
  success: true
  summary:
    atom_count: 1
    bond_count: 0
    topology: "@"
    atoms:
      - "{Cr+3^3}"
    bonds: []
counts:
  success: true
  summary:
    atom_count: 1
    bond_count: 0
    topology: "@"
    atoms:
      - "{Cr+3/1^1}"
    bonds: []
